# model-quantization

./: main.py  pyproject.toml
Deepth/Custom_quantizer/: inference_with_w8a32_quantizer.py  quantized_codegen_350M_mono.py  quantized_detr_resnet-50.py  replace_model_with_quantized_layer.py  w8a16_linear_layer.py
Deepth/L2 - Quantize_and_Dequantize/: random_quantize_and_dequantize.py
Deepth/Pack_and_Unpack/: packing_2_bits_weights.py
Deepth/Quantize_and_Dequantize/: asymmetric_quantize_and_dequantize.py  finer_granularity_with_more_precision.py  random_quantize_and_dequantize.py  symmetric_quantize_and_dequantize.py
Deepth/helper/: utils.py
Fundamentals/: data_types_and_sizes.py  load_model_with_data_type.py  using_polular_model_with_different_types.py
Fundamentals/helper/: utils.py
